# MSFT-AGENT-FRAMEWORK

./: .env.example  .gitignore  AGENT_MODES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_COMPLETION.md  TECHNICAL_DOCUMENTATION_PurchaseOrder.md  TWO_MODES_SUMMARY.md  functional_doc.txt  pyproject.toml  requirements.txt
config/: agent.toml  agent.toml.example  system_prompt.txt
config/orchestrator/: system_prompt.txt  system_prompt_csv_only.txt  system_prompt_full.txt
config/tools/: example_tool.json  fabric_data.json  sql_to_csv.json
deployment/: .dockerignore  Deploy-ToWebApp.ps1  Dockerfile  README.md  Setup-AzureInfra.ps1
docs/: architecture.md
foundry_mcp/: .env.example  README.md
foundry_mcp/agent_creation/: .env.example  README.md  __init__.py  fabric_agent.py
foundry_mcp/app/: __init__.py  mcp_server.py  settings.py
foundry_mcp/config/tools/: fabric_data_agent_account.json
foundry_mcp/config/tools/fabric_data/: service.py
foundry_mcp/deployment/: Dockerfile  README.md
foundry_mcp/tests/: add_msi_to_fabric_workspace.ps1  deploy.ps1  docker-test-local.ps1  foundry_data_agent.py  mcp_agent_client.py  test_agent_direct.py  test_deployed_mcp.py  test_http_mcp.py  test_list_tools.py  test_mcp_enabled_agent.py  test_mcp_server.py  test_simple.py  test_tool_works.py
src/: __init__.py
src/agent/: __init__.py  assistant.py  middleware.py
src/config/: __init__.py  loader.py
src/example_tool/: __init__.py  service.py
src/fabric_data/: __init__.py  client.py  connection.py  service.py
src/loaders/: __init__.py  tools.py
src/memory/: __init__.py  cache.py  manager.py  persistence.py
src/orchestrator/: __init__.py  config.py  loader.py  main.py  mcp_loader.py  middleware.py  workflow_loader.py
src/sql_to_csv/: client.py  service.py
tests/: __init__.py  mcp_server.py  run_tests.ps1  test_agent.py  test_agentic_queries.py  test_e2e_full.py  test_mcp_client.py  test_mcp_docker.py  test_mcp_orchestrator.py  test_memory.py  test_real_e2e.py  test_services_standalone.py
